public class YOLOparser {
    //nothing yet
}