@startuml
interface LogParser {
~ boolean canParse(String)
~ LogObject parse(String)
}
note top of LogParser

 * LogParser is an interface that defines the contract for parsing log entries.
 * Classes implementing this interface should provide mechanisms to determine
 * whether a given log entry can be parsed and to convert the raw log entry
 * into a structured log object.
 
end note

note left of LogParser::canParse(String)
 Validate if the line can be parsed by our parsers
end note
note right of LogParser::parse(String)
 Turn this line into a LogObject
end note

class SyslogParser {
- {static} Pattern LOG_PATTERN
+ boolean canParse(String)
+ LogObject parse(String)
}
note left of SyslogParser::LOG_PATTERN
 RFC-5424 format Regex Tokenizer
end note

note left of SyslogParser::canParse(String)
 override the canParse method in the LogParser interface (do this for any new parser)
end note
note right of SyslogParser::parse(String)
 parse the line using the RFC-5424 format
end note

class JSONobject {
- long timestamp
- String source
- String level
- String message
+ <<Create>> JSONobject(long,String,String,String)
+ long getTimestamp()
+ String getSource()
+ String getLevel()
+ String getMessage()
+ String toString()
}
note top of JSONobject
/  example JSON object class
end note


note left of JSONobject::getTimestamp()
 Helpers below
end note

class LogObject {
- long timestamp
- String source
- String severity
- String category
- String message
- HashMap<String,Integer> SortedLogs
+ <<Create>> LogObject(long,String,String,String,String)
+ long getTimestamp()
+ String getSource()
+ String getSeverity()
+ String getCategory()
+ String getMessage()
+ String toString()
}

note left of LogObject::getTimestamp()
 Helpers below
end note

class IndexingEngine {
~ {static} HashMap<String,List<LogObject>> HostIndex
~ {static} TreeMap<java.time.LocalDate,TreeMap<java.time.LocalTime,List<LogObject>>> TimeIndex
~ {static} void tailFile(Path)
+ {static} List<LogObject> getLogsBySeverity(String)
+ {static} List<LogObject> getLogsByCategory(String)
+ {static} List<LogObject> getLogsByDay(java.time.LocalDate)
+ {static} List<LogObject> getLogsByDayAndTime(java.time.LocalDate,java.time.LocalTime,java.time.LocalTime)
+ {static} Set<java.time.LocalDate> getAvailableDays()
+ {static} Set<java.time.LocalTime> getAvailableTimes(java.time.LocalDate)
+ {static} List<LogObject> getLogsForHost(String)
+ {static} Set<String> getHostKeys()
}
note left of IndexingEngine::HostIndex
 using a static HashMap to store the log objects
end note
note right of IndexingEngine::TimeIndex
 using a static TreeMap to store the log objects by time
end note

note left of IndexingEngine::tailFile(Path)
 tail the log file in a separate thread
end note
note right of IndexingEngine::getLogsBySeverity(String)
 helper to get logs by severity
end note
note left of IndexingEngine::getLogsByCategory(String)
 helper to get logs by category
end note
note right of IndexingEngine::getLogsByDay(java.time.LocalDate)
 helper to get logs by day
end note
note left of IndexingEngine::getLogsByDayAndTime(java.time.LocalDate,java.time.LocalTime,java.time.LocalTime)
 helper to get logs by day and time
end note
note right of IndexingEngine::getAvailableDays()
 helper to show available days
end note
note left of IndexingEngine::getAvailableTimes(java.time.LocalDate)
 helper to show available times for a given day
end note
note right of IndexingEngine::getLogsForHost(String)
 helper to get logs for a given host
end note
note left of IndexingEngine::getHostKeys()
 helper to get available host keys
end note

class GUI {
- {static} GUI myGui
- DefaultListModel<String> listModel
- JList<String> hostList
- JTextPane selectedLogDisplay
- JTextPane liveLogDisplay
- JTabbedPane logTabs
- JButton backButton
- JTextField logSearchField
- List<LogObject> liveLogsBuffer
- Color ACCENT_COLOR
- Color PANEL_BG
- Color LOG_BG
- Color LIST_BG
- Color BORDER_COLOR
- JComboBox<String> pivotBox
- JTextField searchField
- int lastRenderedCount
- String lastSelectedKey
- BrowseMode browseMode
- java.time.LocalDate selectedDay
+ <<Create>> GUI()
+ {static} GUI getMyGui()
- void applySidebarFilter()
- void configureLogPane(JTextPane,Font)
- void loadDays()
- void loadTimesForDay(LocalDate)
- void triggerLogFilter()
+ void setHosts(Set<String>)
+ void refreshDisplay()
+ void appendLiveLog(LogObject)
- void renderLogsToPane(JTextPane,List<LogObject>)
- void appendColoredLog(StyledDocument,LogObject)
- String formatTimestamp(LogObject)
}
note left of GUI::listModel
 A model used to manage and store a list of strings displayed in GUI components, such as JList.
end note
note right of GUI::hostList
 A graphical list component that displays a collection of hostnames or IPs
end note
note left of GUI::selectedLogDisplay
 A JTextPane component used to display the currently selected log entry in the GUI.
end note
note right of GUI::liveLogDisplay
 Represents a text pane component within the GUI for displaying live log updates.
end note
note left of GUI::logTabs
 A tabbed pane used to display logs in different categories or views.
end note
note right of GUI::backButton
 Represents a button used for navigating back within the GUI.
end note
note left of GUI::logSearchField
 A text field used to input and search logs based on user-provided criteria.
end note
note right of GUI::liveLogsBuffer
 Holds a list of live log entries currently being buffered in the GUI.
end note
note left of GUI::ACCENT_COLOR
 Electric Blue
end note
note right of GUI::pivotBox
 Combo box for drop down category selection
end note
note left of GUI::searchField
 A text field for searching logs
end note
note right of GUI::lastRenderedCount
 Used for refreshing the display
end note

note left of GUI::GUI()
 GUI constructor
end note
note right of GUI::getMyGui()
 Helper method to format timestamps
end note
note left of GUI::applySidebarFilter()
 This method enables the user to search for logs based on a specified query.
end note
note right of GUI::configureLogPane(JTextPane,Font)
 Configures the appearance of the log display pane
end note
note left of GUI::loadDays()
 loads available days for browsing logs
end note
note right of GUI::loadTimesForDay(LocalDate)
 loads available times for a given day
end note
note left of GUI::triggerLogFilter()
 triggers log filtering based on current selection
end note
note right of GUI::setHosts(Set<String>)
 sets the available hosts for filtering
end note
note left of GUI::refreshDisplay()
 refreshes the display
end note
note right of GUI::appendLiveLog(LogObject)
 appends incoming logs to the live log display pane
end note
note left of GUI::renderLogsToPane(JTextPane,List<LogObject>)
 renders incoming logs to the selected log display pane
end note
note right of GUI::appendColoredLog(StyledDocument,LogObject)
 styling the log text
end note
note left of GUI::formatTimestamp(LogObject)
 helper to format timestamps
end note

enum BrowseMode {
+  DAYS
+  TIMES
+  OTHER
}
note top of BrowseMode
 Used for filtering logs based on time and day
end note


class Main {
- {static} Path LOG_FILE
+ {static} void main(String[])
- {static} void scheduleGuiRefresh()
}
note left of Main::LOG_FILE
 Path to the Windows Event Log file
end note

note left of Main::scheduleGuiRefresh()
 Schedule a GUI refresh every 500ms
end note

class YOLOparser {
}


LogParser <|.. SyslogParser
JFrame <|-- GUI
IndexingEngine <|-- Main
@enduml